# SyncFile

./: .gitignore  .project  404.html  About_v3next.md  LICENCE  Pipfile  README.docx  README.en.md  README.md  about_v3next_cn.md  client.py  communicate.html  extension_downloader.py  index.html  mod_downloader.py  mod_downloader_readme.txt  moddl.cfg  pyproject.toml  quick-guide.html  requirements.txt  server_autogen.py  server_function.py  starter.cpp  starter.py
.github/: FUNDING.yml
.github/workflows/: build-and-upload.yml  build_binary.yml  deploy-docs.yml  pack.yml
additional_tools/: moddown.py
assets/: 404.html-CqBc8qWM.js  app-DOSvOHmV.js  client_config.html-CEUTp9ce.js  communicate.html-C283eEO6.js  index.html-Bjix6S8b.js  introduction.html-CoCw1cqJ.js  quick-guide.html-wXZ-Jwxo.js  server_config.html-CaJcJaWh.js
client/: client.py  down.py
develop/: .gitignore  .python-version  README.md  pyproject.toml  requirements.txt
develop/src/syncfile/: __init__.py  __main__.py  client.py  down.py  server.py  utils.py
docs/: .gitignore  package-lock.json  package.json
docs/.github/workflows/: deploy-docs.yml
docs/docs/: README.md  communicate.md  quick-guide.md
docs/docs/.vuepress/: config.js
docs/docs/.vuepress/public/: CNAME
docs/docs/reference/: README.md  client_config.md  introduction.md  server_config.md
electron_ui/: forge.config.js  main.js  package-lock.json  package.json
electron_ui/templates/: client.html  dnsrequest.html  downloader.html  index.html  modDownload.html  toolbox.html  undefined.html
mcsmt/client/: client.py  down.py
mcsmt/mixed/: extension_downloader.py  mod_downloader.py
mixed/: down.py  extension_downloader.py  mod_downloader.py
reference/: client_config.html  introduction.html  server_config.html
server/: Pipfile  config_gen.py  server.py  server_autogen.py  server_function.py
src/: mcsmtGo.py
src/filesync/: __init__.py  __main__.py  client.py  down.py  server.py  utils.py
src/mcsmt/: HTTPService.py  __init__.py  __main__.py  info.py  logger.py  starter.py  webApi.py  webApiRunner.py
src/mcsmt/client/: __init__.py  client.py  down.py  ezdns.py  main.py
src/mcsmt/mixed/: __init__.py  down.py  extdown.py  extension_downloader.py  ezdns.py  mod_downloader.py  moddown.py
src/mcsmt/server/: __init__.py  config_gen.py  gen.py  genconf.py  server_autogen.py  server_generate.py  simplehttp.py  wdgen.py
src/syncfile/: __init__.py  __main__.py  client.py  down.py  server.py
test/: .python-version  Cconfig.json  Sconfig.json  dumped_index.json  runCli.sh  runSrv.sh  syncfile
test/source/: hello  ignoredtext
test/source/ignore/: hey
